--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,33 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --color-bg: #000028;
+  --color-accent: #ff0070;
+  --color-link: #ff0070;
+  --color-header-title-color: #db00ff;
+  --color-content: #f1b2ce;
+  --color-question: #ff0070;
+  --color-title-decor: #ff0070;
+  --color-title: #000028;
+  --color-border: #ff0070;
+  --color-hover: rgb(255 0 112 / 0.4);
+  
+  --bg-image: url("../images/cover-image-dark.png");
+  --rec-display: block;
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-bg: #000028;
+    --color-accent: #ff0070;
+    --color-link: #ff0070;
+    --color-header-title: #db00ff;
+    --color-content: #f1b2ce;
+    --color-question: #ff0070;
+    --color-title-decor: #ff0070;
+    --color-title: #000028;
+    --color-border: #ff0070;
+    --color-hover: rgb(255 0 112 / 0.4);
+
+    --bg-image: url("../images/cover-image-dark.png");
+    --rec-display: block;
+  }
 }
