--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,33 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --color-bg: #fff1f7;
+  --color-accent: #ff8dcb;
+  --color-link: #353430;
+  --color-header-title: #ffc2e6;
+  --color-content: #353430;
+  --color-question: #353430;
+  --color-title-decor: #ff8dcb;
+  --color-title: #353430;
+  --color-border: #353430;
+  --color-hover: rgb(50 49 45 / 0.4);
+
+  --bg-image: url("../images/cover-image-light.png");
+  --rec-display: none;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-bg: #fff1f7;
+    --color-accent: #ff8dcb;
+    --color-link: #353430;
+    --color-header-title: #ffc2e6;
+    --color-content: #353430;
+    --color-question: #353430;
+    --color-title-decor: #ff8dcb;
+    --color-title: #353430;
+    --color-border: #353430;
+    --color-hover: rgb(50 49 45 / 0.4);
+
+    --bg-image: url("../images/cover-image-light.png");
+    --rec-display: none;
+  }
 }
