--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,372 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-size: var(--font-size);
+  font-family: var(--font-family);
+  background: var(--color-bg) var(--bg-image) fixed center / cover;
+  font-weight: var(--font-weight-regular);
+  line-height: 1.3;
+}
+
+.header {
+  padding: 10px;
+  height: max(100vh, 668px);
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-content: center;
+  font-weight: var(--font-weight-bold);
+}
+
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  content: "";
+  border-top: var(--border);
+  border-right: var(--border);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.decorated-zone::after {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  content: "";
+  border-bottom: var(--border);
+  border-left: var(--border);
+  inline-size: 25px;
+  block-size: 25px;
+}
+
+.header__theme-menu {
+  align-self: center;
+}
+
+.header__theme-menu-list {
+  display: grid;
+  justify-content: end;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  padding: 2px 13px;
+  background: transparent;
+  color: var(--color-border);
+  border: var(--border-transparent);
+  text-align: center;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: var(--border);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: var(--border);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--color-hover);
+  cursor: pointer;
+}
+
+.title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  line-height: 0.8;
+  color: var(--color-header-title);
+}
+
+.header__title {
+  text-shadow: 4px 4px 0 var(--color-accent);
+}
+
+.article-title {
+  background-color: var(--color-title-decor);
+  font-size: var(--font-size);
+  color: var(--color-title);
+}
+
+.header__description {
+  display: flex;
+  align-self: center;
+  line-height: 1.3;
+}
+
+.decorative_element {
+  font-weight: var(--font-weight-regular);
+  line-height: 1.4;
+  position: absolute;
+  display: var(--rec-display);
+  top: 10px;
+  right: 29px;
+  content: "";
+  color: var(--color-accent);
+  text-align: center;
+  padding-inline-end: 10px;
+  text-transform: uppercase;
+}
+
+.decorative_element::after {
+  content: "";
+  position: absolute;
+  top: 7px;
+  right: -10px;
+  width: 9px;
+  height: 9px;
+  background-color: var(--color-accent);
+  border-radius: 50%;
+  box-shadow: 0 0 4px 2px var(--color-accent);
+}
+
+.main {
+  margin-block: 40px;
+  margin-inline: 10px;
+}
+
+.section {
+  margin-block-end: 50px;
+}
+
+.section__title {
+  margin-block-end: 20px;
+  font-size: var(--font-size);
+  color: var(--color-question);
+}
+
+.article-block__subtitle {
+  font-weight: var(--font-weight-regular);
+}
+
+.section__block-title {
+  margin-block-end: 20px;
+}
+
+.article-block__text {
+  margin-block: 10px 20px;
+  color: var(--color-content);
+}
+
+.article-block__link {
+  border: var(--border-transparent);
+  text-decoration: none;
+  text-shadow: var(--text-shadow);
+}
+
+.article-block__link:hover {
+  border-bottom: 1px solid var(--color-link);
+}
+
+.article-block__link:focus {
+  outline: none;
+}
+
+.article-block__link:focus-visible {
+  border: 1px solid var(--color-link);
+}
+
+.gallerey-list {
+  margin-top: 8px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  max-width: 100%;
+}
+
+.gallerey-list img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.footer {
+  height: max(100vh, 668px);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__title {
+  text-shadow: var(--text-shadow);
+}
+
+@media (min-width: 768px) {
+
+  .header {
+    height: max(100vh, 1024px);
+    padding-inline: 0 20px;
+    padding-block: 20px;
+    justify-items: end;
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    justify-self: start;
+  }
+
+  .header__description{
+    inline-size: 49%;
+  }
+
+  .decorative_element {
+    top: 20px;
+    right: 40px;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .decorative_element::after {
+    right: -10px;
+  }
+
+  .main {
+    margin-block: 60px;
+    margin-inline: 20px;
+  }
+
+  .section__title {
+    margin-block-end: 20px;
+  }
+
+  .article-block__text {
+    color: var(--color-content);
+  }
+
+  .section {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 0px 20px;
+    margin-block-end: 60px;
+  }
+
+  .article-block {
+    grid-column: 2;
+  }
+
+  .section--alt {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  .section--alt > .article-block {
+    grid-column: 1;
+  }
+
+  .section__title-alt {
+    max-width: 236px;
+  }
+
+  .gallerey-list {
+    margin-top: 18px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+  }
+
+  .gallerey-list img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  .gallerey-list__item:nth-child(1) {
+    grid-column: span 2;
+  }
+
+  .gallerey-list__item:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1 / -2;
+  }
+
+  .gallerey-list__item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallerey-list__item:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .gallerey-list__item:nth-child(5) {
+    grid-column: 2 / -1;
+  } 
+
+  .footer {
+    height: max(100vh, 1024px);
+    }
+}
+
+@media (min-width: 1024px) {
+
+  .header {
+    height: max(100vh, 768px);
+    justify-items: center;
+  }
+
+  .title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    justify-self: start;
+  }
+
+  .header__description {
+    justify-self: end;
+  }
+
+  .header__theme-menu {
+    padding-left: 20px;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    padding: 0;
+    display: flex;
+    gap: 10px;
+  }
+
+  .section {
+    gap: 0 10px;
+  }
+
+  .section__title-alt {
+    max-width: 315px;
+  }
+
+  .section--alt {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+    gap: 0 20px;
+  }
+
+  .section--alt > .section__title-alt {
+    grid-column: 1 / -1;
+  }
+
+  .section--alt > .article-block {
+    grid-column: auto;
+  }
+
+  .footer {
+    height: max(100vh, 768px);
+  }
 }
