--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,28 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --color-bg: #000028;
+  --color-accent: #ff0070;
+  --color-header-title-color: #db00ff;
+  --color-content: #f1b2ce;
+  --color-question: #ff0070;
+  --color-title-decor: #ff0070;
+  --color-title: #000028;
+  --color-border: #ff0070;
+  --color-hover: rgb(255 0 112 / 0.4);
+
+  --font-family: "IBM Plex Mono", sans-serif;
+  --font-size: 18px;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+  
+  --rec-display: block;  
+
+  --bg-image: url("../images/cover-image-dark.png");
+  --text-shadow: 2px 2px 0 var(--color-accent);
+
+  --border: 1px solid var(--color-border);
+  --border-transparent: 1px solid transparent;
+  
+  --gap-small: 10px;
+  --gap-medium: 20px;
+}
+
