--- a/styles/dark.css
+++ b/styles/dark.css
@@ -11,7 +11,7 @@
   --color-hover: rgb(255 0 112 / 0.4);
   
   --bg-image: url("../images/cover-image-dark.png");
-  --rec-display: block;
+  --display-rec: block;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,6 +28,6 @@
     --color-hover: rgb(255 0 112 / 0.4);
 
     --bg-image: url("../images/cover-image-dark.png");
-    --rec-display: block;
+    --display-rec: block;
   }
 }
