--- a/styles/light.css
+++ b/styles/light.css
@@ -11,7 +11,7 @@
   --color-hover: rgb(50 49 45 / 0.4);
 
   --bg-image: url("../images/cover-image-light.png");
-  --rec-display: none;
+  --display-rec: none;
 }
 
 @media (prefers-color-scheme: light) {
@@ -28,6 +28,6 @@
     --color-hover: rgb(50 49 45 / 0.4);
 
     --bg-image: url("../images/cover-image-light.png");
-    --rec-display: none;
+    --display-rec: none;
   }
 }
