--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,7 +14,7 @@
   --font-weight-bold: 700;
   --bg-image: url("../images/cover-image-dark.png");
   --text-shadow: 2px 2px 0 var(--color-accent);
-  --rec-display: block;  
+  --display-rec: block; 
   --border: 1px solid var(--color-border);
   --border-transparent: 1px solid transparent;
   --gap-small: 10px;
