--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
   --color-bg: #000028;
   --color-accent: #ff0070;
-  --color-header-title-color: #db00ff;
+  --color-header-title: #db00ff;
   --color-content: #f1b2ce;
   --color-question: #ff0070;
   --color-title-decor: #ff0070;
